# PySignalduino

./: .gitignore  .roomodes  AGENTS.md  MANCHEST_INTEGRATION_COMPLETE.md  METHODS_MIGRATION_COMPLETE.md  README.adoc  README.md  docToolchainConfig.groovy  main.py  protocols.json  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap_analysis_report.md  sitemap_validation_report.md
.devcontainer/: .devcontainer.env.sample  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.roo/: mcp.json
docs/: ASYNCIO_MIGRATION.md  MANCHESTER_MIGRATION.md  MIGRATION.md  SIGNALDUINO_MIGRATION_PLAN.md  devcontainer_env.md  docinfo.html  index.adoc  pysignalduino_cli.apng  pysignalduino_fhemweb.apng  robots.txt  sitemap_template.xml
lib/: SD_ProtocolData.pm
plans/: fhem_mqtt_integration_plan.md  mqtt_command_interface_architecture.md
sd_protocols/: __init__.py  helpers.py  loader.py  manchester.py  message_synced.py  message_unsynced.py  pattern_utils.py  postdemodulation.py  protocols.json  rsl_handler.py  sd_protocol_data.py  sd_protocols.py
signalduino/: __init__.py  commands.py  constants.py  controller.py  exceptions.py  firmware.py  hardware.py  mqtt.py  persistence.py  transport.py  types.py
tests/: conftest.py  test_cc1101_set.py  test_connection_drop.py  test_controller.py  test_decompress_payload.py  test_firmware.py  test_helpers.py  test_helpers_mc2dmc_and_logging.py  test_loader.py  test_manchester_protocols.py  test_mc_parser.py  test_mn_bresser_lightning.py  test_mn_parser.py  test_mqtt.py  test_mqtt_cc1101.py  test_mqtt_commands.py  (+13 more)
(+59 files in other folders)
