[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signalduino-mqtt"
version = "0.1.0"
description = "SignalDuino Protocols in Python with MQTT bridge"
authors = [{name="Sven"}]
dependencies = [
    "requests",
    "pyserial-asyncio",
    "aiomqtt",
    "python-dotenv"
]

[tool.setuptools.packages.find]
include = ["signalduino", "sd_protocols"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.pytest-asyncio]
mode = "auto"